[tool.poetry]
name = "y"
version = "0.1.0"
description = "Top 25 Algorithms Every Programmer Should Know"
authors = ["Pedro Lopez Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-xdist = "^3.1.0"
pyupgrade = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
expects = "^0.9.0"

[tool.flake8]
ignore= ["E501", "E124","E203", "W291", "W503", "W504", "E302", "E303"]

[tool.yapf]
based_on_style = "google"

[tool.pyright]
venvPath="/home/pmareke/.cache/pypoetry/virtualenvs"
venv="y-ELsKAsHX-py3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
