[tool.poetry]
name = "y"
version = "0.1.0"
description = "Top 25 Algorithms Every Programmer Should Know"
authors = ["Pedro Lopez Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
toml = "^0.10.2"
mypy = "^0.971"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0"
expects = "^0.9.0"
pylint = "^2.15.2"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
pyupgrade = "^3.3.1"

[tool.flake8]
ignore= ["E501", "E124","E203", "W291", "W503", "W504", "E302", "E303"]

[tool.pyright]
venvPath="/home/pmareke/.cache/pypoetry/virtualenvs"
venv="y-ELsKAsHX-py3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
